Added HTML Syntax and setup Style Sheet

--- a/index.html
+++ b/index.html
@@ -3,32 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <!-- main container -->
+  <div class="focused-build">
+    <!-- users professional headshot -->
+    <img src="/images/avatar-jessica.jpeg" alt="professional headshot of Jessica Randall">
+    <!-- users short info -->
+    <h1 id="name">Jessica Randall</h1>
+    <h4 id="location">London, United Kingdom</h4>
+    <h3 id="summary">"Front-end developer and avid reader."</h3>
+    <!-- container with actual links to social media sites -->
+    <div class="socials">
+      <a href="https://github.com/" class="link1">GitHub</a>
+      <a href="https://www.frontendmentor.io/" class="link2">Frontend Mentor</a>
+      <a href="https://www.linkedin.com/" class="link3">LinkedIn</a>
+      <a href="https://www.twitter.com/" class="link4">X / Twitter</a>
+      <a href="https://www.instagram.com/" class="link5">Instagram</a>
+    </div>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  </div>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    </p>
+    <p>
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+
   </div>
 </body>
 </html>
