Adding fonts back in

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <!-- users professional headshot -->
     <img src="/images/avatar-jessica.jpeg" alt="professional headshot of Jessica Randall">
     <!-- users short info -->
-    <h1 id="name">Jessica Randall</h1>
-    <h4 id="location">London, United Kingdom</h4>
-    <h3 id="summary">"Front-end developer and avid reader."</h3>
+    <div class="info">
+      <h1 id="name">Jessica Randall</h1>
+      <h4 id="location">London, United Kingdom</h4>
+      <h3 id="summary">"Front-end developer and avid reader."</h3>
+    </div>
+
     <!-- container with actual links to social media sites -->
     <div class="socials">
       <a href="https://github.com/" class="link1">GitHub</a>
@@ -25,11 +28,8 @@
       <a href="https://www.twitter.com/" class="link4">X / Twitter</a>
       <a href="https://www.instagram.com/" class="link5">Instagram</a>
     </div>
-
   </div>
-
-
-  
+ 
   <div class="attribution">
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
@@ -37,7 +37,7 @@
     <p>
       Coded by <a href="#">Your Name Here</a>.
     </p>
-
   </div>
+  
 </body>
 </html>
