--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- main container -->
   <div class="focused-build">
     <!-- users professional headshot -->
-    <img src="/images/avatar-jessica.jpeg" alt="professional headshot of Jessica Randall">
+    <img src="/assets/images/avatar-jessica.jpeg" alt="professional headshot of Jessica Randall">
     <!-- users short info -->
     <div class="info">
       <h1 id="name">Jessica Randall</h1>
@@ -22,11 +22,11 @@
 
     <!-- container with actual links to social media sites -->
     <div class="socials">
-      <a href="https://github.com/" class="link1">GitHub</a>
-      <a href="https://www.frontendmentor.io/" class="link2">Frontend Mentor</a>
-      <a href="https://www.linkedin.com/" class="link3">LinkedIn</a>
-      <a href="https://www.twitter.com/" class="link4">X / Twitter</a>
-      <a href="https://www.instagram.com/" class="link5">Instagram</a>
+      <a href="https://github.com/" target="_blank" class="link1">GitHub</a>
+      <a href="https://www.frontendmentor.io/" target="_blank" class="link2">Frontend Mentor</a>
+      <a href="https://www.linkedin.com/" target="_blank" class="link3">LinkedIn</a>
+      <a href="https://www.twitter.com/" target="_blank" class="link4">X / Twitter</a>
+      <a href="https://www.instagram.com/" target="_blank" class="link5">Instagram</a>
     </div>
   </div>
  
