--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
       <a href="https://www.instagram.com/" target="_blank" class="link5">Instagram</a>
     </div>
   </div>
+  <div class="clear"></div>
  
   <div class="attribution">
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     </p>
     <p>
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a  href="https://www.frontendmentor.io?ref=challenge" target="_blank">Jorge Alvarado</a>.
     </p>
   </div>
   
