--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  
+  <link rel="stylesheet" href="/style.css">
+  <!-- <link rel="stylesheet" media="screen and (max-width: 480px)" href="/css/mobile-style.css"> -->
   <title>Frontend Mentor | Social links profile</title>
 
 </head>
@@ -36,7 +38,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     </p>
     <p>
-      Coded by <a  href="https://www.frontendmentor.io?ref=challenge" target="_blank">Jorge Alvarado</a>.
+      Coded by <a  href="https://www.linkedin.com/in/jorgesoftwardev/" target="_blank">Jorge Alvarado</a>.
     </p>
   </div>
   
